// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process HJSON nodes correctly correctly creates a node from HJSON which is a single object 1`] = `
Array [
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "foo",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "FooHJson",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process HJSON nodes correctly correctly creates a node from HJSON which is a single object 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "foo",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "FooHJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "{
  id: foo
  blue: true
  funny: yup
}",
        "dir": "<TEMP_DIR>/foo/",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/hjson",
          "name": "test",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
]
`;

exports[`Process HJSON nodes correctly correctly creates nodes from HJSON which is an array of objects 1`] = `
Array [
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "foo",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameHJson",
      },
      "parent": "whatever",
    },
  ],
  Array [
    Object {
      "blue": false,
      "children": Array [],
      "funny": "nope",
      "id": "uuid-from-gatsby",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameHJson",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process HJSON nodes correctly correctly creates nodes from HJSON which is an array of objects 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "foo",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameHJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "[
  {
    id: foo
    blue: true
    funny: yup
  }
  {
    blue: false
    funny: nope
  }
]",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/hjson",
          "name": "test",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "blue": false,
        "children": Array [],
        "funny": "nope",
        "id": "uuid-from-gatsby",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameHJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "[
  {
    id: foo
    blue: true
    funny: yup
  }
  {
    blue: false
    funny: nope
  }
]",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/hjson",
          "name": "test",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
]
`;
